# Tool2E450

./: .gitignore  READ.me  commit.bat  commit.sh
doc/Hardware/Display/ER-TFTM101-1_3SPI(SD+CTP+30L24T3Y+128M)/: ER-TFTM101-1-3SPI(30L24T3Y).uvopt  RA8876.LST  RA8876.c  RA8876.h  SD.h  sd  sd.M51  sd.hex  sd.plg
doc/Hardware/Display/ER-TFTM101-1_4SPI(SD+CTP+30L24T3Y+128M)/: ER-TFTM101-1-4-SPI(30L24T3Y).uvopt  RA8876.LST  RA8876.c  RA8876.h  TP.h  _desktop.ini  sd  sd.M51  sd.hex  sd.plg
doc/Hardware/Display/ER-TFTM101-1_I2C(SD+CTP+30L24T3Y+128M)/: 8876demo.h  ER-TFTM101-1-I2C(30L24T3Y).uvopt  RA8876.LST  RA8876.c  RA8876.h  sd  sd.M51  sd.hex  sd.lnp  sd.plg
doc/Hardware/Display/RA8876-Driver-for-STM32F429ZIT6-FMC-master/: RA8876_driver.c  stm32f429_fmc.c  stm32f429_fmc.h  stm32f429_gpio.c  stm32f429_gpio.h
doc/РД/: 2A450 RemouteC+SPI (2).ioc  Device_pins.txt  Panel_pins.txt
doc/ТЗ/: 2A450 RemouteC+SPI (2).ioc  PIN_FUNC.xlsx  links.txt
sources/: CMakeLists.txt  Tool2E450.uvmpw  Tool2E450.uvmpw.uvgui.Sasha
sources/Device/: CMakeLists.txt  Device.uvguix.Sasha  Device.uvoptx  Device.uvprojx
sources/Device/Listings/: Device2.map
sources/Device/Objects/: Device2.axf  Device2.build_log.htm  Device2.hex  Device2.htm  Device2.lnp  Device_Debug.dep  Device_Release.dep  hal.d  hal_it.d  hal_pins.d  hal_spi1_d.d  hal_tim.d  hal_tim2.d  hal_tim3.d  main_d.d  startup_stm32f407xx.d  stm32f4xx_hal.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_crc.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_hcd.d  stm32f4xx_hal_i2c.d  stm32f4xx_hal_nor.d  stm32f4xx_hal_pcd.d  stm32f4xx_hal_pcd_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_spi.d  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim_ex.d  stm32f4xx_ll_usb.d  system_stm32f4xx.d  timer.d
sources/Device/src/: main_d.cpp
sources/Device/src/Generator/: FPGA.cpp  Generator.cpp  MAX532.cpp  MCP4811.cpp  SwitchingBoard.cpp
sources/Device/src/Hardware/: Timer.cpp
sources/Device/src/Hardware/Display/: RA8876.cpp  RA8876.h
sources/Device/src/Hardware/HAL/: HAL_PINS.cpp  HAL_PINS.h
sources/Panel/: CMakeLists.txt  Panel.uvguix.Sasha  Panel.uvoptx  Panel.uvprojx
sources/Panel/src/: defines.h  main_d.cpp
sources/Panel/src/Device/: Messages.cpp  Messages.h
sources/Panel/src/Display/: Colors.cpp  Colors.h  Colors_stm.cpp  Display.cpp  Display.h  Primitives.cpp  Primitives.h  Primitives_stm.cpp  Text.cpp  Text.h
sources/Panel/src/Display/Font/: Font.cpp  Font.h  FontBig.cpp  FontMid.cpp
sources/Panel/src/Hardware/CMSIS/: startup_stm32f407xx.s
sources/Panel/src/Hardware/Display/: RA8876.cpp
sources/Panel/src/Hardware/HAL/: HAL.cpp  HAL.h
sources/Panel/src/Hardware/Keyboard/: Keyboard.cpp  Keyboard.h
sources/Panel/src/Menu/: Menu.cpp  Menu.h  MenuItems.cpp  MenuItems.h
sources/Panel/src/Menu/Pages/: InputKeyboard.cpp  InputKeyboard.h  PageMain.cpp  PageMessages.cpp  Pages.h
sources/Panel/src/Settings/: Settings.h
sources/Panel/src/Utils/: Math.h
sources/VS/: CMakeLists.txt
sources/VS/Panel/: CMakeLists.txt
sources/VS/Panel/src/: main_win.cpp
sources/VS/Panel/src/Display/: Colors_win.cpp  Display_win.cpp  Primitives_win.cpp
sources/VS/Panel/src/GUI/: Application.cpp  Application.h  ComPort.cpp  ComPort.h  ConsoleSCPI.cpp  ConsoleSCPI.h  GovernorGUI.cpp  GovernorGUI.h  rs232.c  rs232.h
sources/VS/Panel/src/Hardware/HAL/: HAL_EEPROM_win.cpp  HAL_PINS_win.cpp  HAL_SPI1_win.cpp  HAL_TIM_win.cpp  HAL_win.cpp
sources/VS/Panel/src/Keyboard/: Keyboard_win.cpp
sources/common/_VS_KEIL/FatFS/: ff.h
sources/common/_VS_KEIL/HAL/: stm32f4xx_hal.cpp
sources/common/_VS_KEIL/std_includes/: cstdarg  cstdlib  cstring
sources/scripts/Keil/: assembly.bat  build.bat  edit.bat
sources/scripts/vs_keil/: assembly.bat  edit.bat
sources/scripts/vs_win/: assembly.bat  build.bat  edit.bat  make.bat  run.bat
